MDEV-29179 Condition pushdown from HAVING into WHERE is not shown in optimizer trace

JOIN::optimize_inner(), Condition pushdown from HAVING into WHERE
	  not shown in optimizer trace.